Actualizando para compi2 :v

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="column large-9 mob-full intro-text">
                 <h3>Hola, soy Javier Gutierrez</h3>
                 <h1>
-                    Estudiante de 4to semestre de Ingeniería en Ciencias y Sistemas
+                    Estudiante de 6to semestre de Ingeniería en Ciencias y Sistemas
 
                 </h1>
             </div>
@@ -233,9 +233,9 @@
     	<div class="mt-3">
             <h2 class="section-heading section-heading--centerbottom">Lenguajes de programación:</h2>
             <div class="progress bg-dark">
-              <div class="progress-bar bg-white" role="progressbar" style="width:70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar bg-white" role="progressbar" style="width:80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                <div class="progress-bar-title text-white">Java</div>
-               <span class="progress-bar-number text-white">70%</span>
+               <span class="progress-bar-number text-white">80%</span>
               </div>
                   </div>
                   <div class="progress bg-dark">
@@ -251,9 +251,9 @@
                     </div>
                   </div>
                   <div class="progress bg-dark">
-                    <div class="progress-bar bg-white" role="progressbar" style="width:55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar bg-white" role="progressbar" style="width:80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                       <div class="progress-bar-title text-white">JavaScript</div>
-                      <span class="progress-bar-number text-white">55%</span>
+                      <span class="progress-bar-number text-white">80%</span>
                     </div>
                   </div>
                   <div class="progress bg-dark">
@@ -284,6 +284,12 @@
                     <div class="progress-bar bg-white" role="progressbar" style="width:50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                       <div class="progress-bar-title text-white">PHP</div>
                       <span class="progress-bar-number text-white">50%</span>
+                    </div>
+                  </div>
+                  <div class="progress bg-dark mb-md-0">
+                    <div class="progress-bar bg-white" role="progressbar" style="width:65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
+                      <div class="progress-bar-title text-white">C++</div>
+                      <span class="progress-bar-number text-white">65%</span>
                     </div>
                   </div>
                 </div>
