--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             </ul>
 
             <ul class="header-social">
-                <li><a href="https://www.facebook.com/GutySAO"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-                <li><a href="https://twitter.com/GutySAO"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+                <!--<li><a href="https://www.facebook.com/GutySAO"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>-->
+                <!--<li><a href="https://twitter.com/GutySAO"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>-->
                 <li><a href="https://www.instagram.com/javgutyleo/"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/javier-alejandro-gutierrez-de-le%C3%B3n-2b7b82219/"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
             </ul>
@@ -103,7 +103,7 @@
             <div class="column large-9 mob-full intro-text">
                 <h3>Hola, soy Javier Gutierrez</h3>
                 <h1>
-                    Estudiante de 8vo semestre de Ingeniería en Ciencias y Sistemas
+                    Estudiante de 9no semestre de Ingeniería en Ciencias y Sistemas
 
                 </h1>
             </div>
